--- a/CodingPractice/CodingPractice.csproj
+++ b/CodingPractice/CodingPractice.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinkedList.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="StringAlgs.cs" />
     <Compile Include="TestingGround.cs" />
